# hf-adapters

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  ONBOARDING.md  README.md  adapter_changes.md  hf_adapters.md  pyproject.toml
.claude/commands/: pr-arielge.md
.claude/memory/: MEMORY.md  feedback_adapter_patterns.md  project_status.md  reference_spyre_pod.md
.github/: CODEOWNERS  actionlint.yaml
.github/actions/build-hf-adapters/: action.yaml
.github/actions/checkout-repo/: action.yaml
.github/actions/gather-runner-info/: action.yaml  action.yml
.github/actions/run-spyre-test/: action.yaml
.github/actions/setup-spyre-test/: action.yaml
.github/cache_config/: hf_models_and_datasets.yaml  manage_cache.py
.github/scripts/: README.md  create_model_spyre_table.py  fetch_top_models.py  generate_test_matrix.py  generate_weekly_shards.py  ingest_xml.py
.github/workflows/: _spyre_tests.yaml  _test_common.yaml  _test_jobs.yaml  _test_matrix.yaml  add_or_remove_artifacts_from_cache.yaml  cron_test.yaml  daily_test.yaml  integration-tests.yaml  push-to-clickhouse.yaml  test_daily.yaml  test_each_commit.yaml  test_pull_request.yaml  test_weekly.yaml  weekly_test.yaml
docs/: dense_transformers_full_attention_under10B.md  fms_comparison.md  generate_vs_stock_hf.md  spyre-numerical-findings.md
evals/gsm8k/: compare_results.py  eval_gsm8k_gpu.py  eval_gsm8k_spyre.py  gsm8k_common.py  gsm8k_samples.json
evals/mmlu/: mmlu_eval.py  mmlu_samples.json
hf_adapters/: __init__.py  auto_spyre_model.py  hf_bert.py  hf_bge_reranker.py  hf_common.py  hf_gemma.py  hf_gemma3.py  hf_gemma4.py  hf_gemma4_mm.py  hf_gpt2.py  hf_gpt_neo.py  hf_gpt_neox.py  hf_granite.py  hf_granite_vision.py  hf_granite_vision_encoder.py  hf_granite_vision_mm.py  hf_granitemoehybrid.py  hf_llama.py  hf_ministral.py  hf_mistral.py  hf_mistral3.py  hf_mistral3_vision_mm.py  hf_modernbert.py  hf_mpnet.py  hf_olmo.py  hf_olmo2.py  hf_phi3.py  hf_pixtral_vision.py  hf_qwen2.py  hf_qwen3.py  hf_siglip_vision.py  hf_smollm3.py  hf_xlm_roberta.py  st_backend.py
module_discovery/: auto_generate_module_config.py
resources/: model_dashboard.py  top_embedding_models.csv  top_generative_models.csv
scripts/: check_uv_lock.sh
tests/: _generate_edge_case_helpers.py  _helpers.py  _vision_helpers.py  conftest.py  model_registry.py  run_oot_module_configs.sh  test_adapter_coverage.py  test_adapter_cpu_accuracy.py  test_avg_pool_repro.py  test_block_cpu_vs_spyre.py  test_e2e_embed_compare_spyre.py  test_e2e_smoke_spyre.py  test_e2e_token_compare_spyre.py  test_embed_cpu_accuracy.py  test_generate_edge_cases.py  test_generate_edge_cases_cpu.py  test_generate_edge_cases_spyre.py  test_load_cpu.py  test_load_spyre.py  test_modules.py  test_modules_custom.py  test_multibatch_generate.py  test_multibatch_generate_cpu.py  test_qformer_repro.py  test_qformer_split_repro.py  test_st_backend_cpu.py  test_vision_accuracy_spyre.py  test_vision_encoder_cpu.py  test_vision_encoder_spyre.py  test_vision_sdpa_repro.py  test_vlm_e2e_cpu.py
tests/configs/module_tests/: Ministral-3-14B-Instruct-2512.yaml  Mistral-Small-3.2-24B-Instruct-2506.yaml  gpt_oss_20b_vllm_spyre.yaml  granite_3_3_8b_instruct_spyre.yaml  granite_3_3_8b_instruct_spyre_vllm.yaml  granite_4_1_8b_spyre.yaml  granite_4_1_8b_vllm.yaml
tests/cpu/: _generate_helpers.py  conftest.py  test_adapter_cpu_accuracy.py  test_embed_cpu_accuracy.py  test_generate_cpu.py  test_generate_edge_cases_cpu.py  test_load_cpu.py  test_multibatch_generate_cpu.py  test_reranker_cpu_accuracy.py  test_st_backend_cpu.py  test_vlm_e2e_cpu.py
tests/spyre/: conftest.py  create_model_spyre_table.py  test_block_cpu_vs_spyre.py  test_block_cpu_vs_spyre_DEPRECATED.py  test_e2e_embed_compare_spyre.py  test_e2e_reranker_compare_spyre.py  test_e2e_smoke_spyre.py  test_e2e_token_compare_spyre.py  test_load_spyre.py  test_vlm_e2e_embed_spyre.py  test_vlm_e2e_spyre.py  weekly_test.py
tests/spyre/edge_cases/: _common.py  _shared.py  conftest.py  test_eos_first_of_second_block.py  test_eos_first_of_second_block_spyre.py  test_eos_first_token.py  test_eos_first_token_spyre.py  test_eos_inside_prompt.py  test_eos_inside_prompt_spyre.py  test_eos_mid_block.py  test_eos_mid_block_spyre.py  test_eos_on_last_step.py  test_eos_on_last_step_spyre.py  test_greedy_long_multi_block.py  test_greedy_mixed_short.py  test_greedy_mixed_with_single_token.py  test_greedy_prompt_exactly_block.py  test_greedy_short_block_minus_one.py  test_greedy_short_cross_block.py  test_greedy_short_one_token.py  test_greedy_short_two_blocks_plus.py  test_greedy_single_token_prompt.py  test_long_multi_block_spyre.py  test_mixed_short_spyre.py  test_mixed_with_single_token_spyre.py  test_no_eos_runs_full_budget.py  test_no_eos_runs_full_budget_spyre.py  test_no_pad_token_fallback.py  test_no_pad_token_fallback_spyre.py  test_prompt_exactly_block_spyre.py  test_sampling_determinism.py  test_sampling_determinism_spyre.py  test_sampling_top_k_zero.py  test_sampling_top_k_zero_spyre.py  test_short_block_minus_one_spyre.py  test_short_cross_block_spyre.py  test_short_one_token_spyre.py  test_short_two_blocks_plus_spyre.py  test_single_token_prompt_spyre.py  test_zero_new_tokens.py  (+1 more)
tests/spyre/weekly_generation/: add_past_rows.py  clickhouse_db.py  create_model_spyre_table.py  result_sink.py  snapshot_model_counts.py  weekly_test.py  weekly_test_iterative.py
utils/: fetch_top_embedding_models.py  fetch_top_generative_models.py  hf_model_catalog.py  model_viewer_ui.py  utilities.py
utils/model_ops/: README.md
utils/model_ops/models/gpt_oss/: run_huggingface.py
utils/model_ops/models/granite3/: run_huggingface.py
utils/model_ops/models/granite41/: run_huggingface.py
utils/model_ops/models/granite4_h/: run_huggingface.py
utils/model_ops/models/llama_31/: run_huggingface.py
utils/model_ops/utils/: torchop_yaml.py
utils/module_discovery/: README.md  auto_generate_module_config.py  auto_generate_module_config_vllm.py
(+2 files in other folders)
