[project]
name = "hf-adapters-spyre"
version = "0.1.0"
description = "Minimal runtime patches that make stock HuggingFace Transformers models run on Spyre accelerators"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=5.10.2",
    "sentencepiece",
    "accelerate",
    "sentence_transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hf_adapters"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long
    "N806",  # Variable in function should be lowercase (allow B, H, L, D, etc.)
    "N812",  # Lowercase imported as non-lowercase (allow F for functional)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["hf_adapters/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Spyre tests live under tests/spyre/ and are skipped at collection on hosts
# without torch_spyre via tests/spyre/conftest.py.
markers = [
    "slow: deselected by default; opt in with --run-slow",
    "spyre_block: per-layer block-compare on Spyre; deselected by default until the senlib/torch shutdown SIGABRT is root-caused",
]

[tool.uv.sources]
torch-spyre = { git = "https://github.com/torch-spyre/torch-spyre", rev = "main" }

[dependency-groups]
spyre = ["torch-spyre"]
dev = [
    "pre-commit>=3.5.0",
    "black>=26.3.1",
    "ruff>=0.15.6",
    "mypy>=1.14.0,<2",
    "typing-extensions",
    "nicegui"
]
test = [
    "pytest",
]
