[project]
name = "hf-adapters-spyre"
version = "0.1.0"
description = "Minimal runtime patches that make stock HuggingFace Transformers models run on Spyre accelerators"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=5.10.2",
    "sentencepiece",
    "accelerate",
    "sentence_transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hf_adapters"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long
    "N806",  # Variable in function should be lowercase (allow B, H, L, D, etc.)
    "N812",  # Lowercase imported as non-lowercase (allow F for functional)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["hf_adapters/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Spyre-pod-only tests: they import torch_spyre and set DEVICE="spyre" at
# module level; running them under pytest on a CPU-only host fails at
# collection. Run them directly with `python3 tests/test_*_spyre*.py`.
addopts = "--ignore-glob=tests/test_*spyre*.py"
markers = [
    "slow: deselected by default; opt in with --run-slow",
]

[tool.uv.sources]
torch-spyre = { git = "https://github.com/torch-spyre/torch-spyre", rev = "main" }

[dependency-groups]
spyre = ["torch-spyre"]
dev = [
    "pre-commit>=3.5.0",
    "black>=26.3.1",
    "ruff>=0.15.6",
    "mypy>=1.14.0,<2",
    "typing-extensions",
    "nicegui"
]
models-ops = [
    "huggingface_hub",
    "mistral_common",
    "python-dotenv",
    "PyYAML",
    "regex",
]
test = [
    "pytest",
]
